<resources>
    <string name="app_name">超級助教</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">超級助教 App</string>
    <string name="nav_header_desc">歡迎回來!</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_InputCourseCode">輸入課程代碼</string>
    <string name="menu_EnterClass">進入教室</string>
    <string name="menu_Table">我的課表</string>
    <string name="menu_Set">個人設定</string>
    <string name="menu_stdMainPage">學生主頁</string>
    <string name="menu_tecMainPage">老師主頁</string>
    <string name="menu_gallery1">Gallery</string>
    <string name="menu_tecHome2">首頁</string>
    <string name="menu_tecNewClass">新增課程</string>
    <string name="menu_tecEnterClass">進入教室</string>

    <string name="login_acc">帳號</string>
    <string name="login_pwd">密碼</string>
    <string name="login_in_put_acc">請輸入學號/教師編碼</string>
    <string name="login_login">登入</string>
    <string name="login_create_acc">建立帳號</string>
    <string name="login_member_login">會員登入</string>
    <string name="login_subtitle">Log in and start learning</string>
    <string name="login_remember">記住我</string>

    <string name="reg_reg">註冊</string>
    <string name="reg_subtitle">Sign up and start learning</string>
    <string name="reg_in_put_department">(學生)輸入科系</string>
    <string name="reg_name">姓名</string>
    <string name="reg_input_pwd">輸入密碼</string>
    <string name="reg_email">Email address</string>
    <string name="reg_create_acc">註冊帳號</string>
    <string name="reg_btn_std">我是學生</string>
    <string name="reg_btn_tch">我是老師</string>

    <string name="Realmain_btn_LoginOrReg">登入/註冊▸</string>
    <string name="Realmain_subtitle">開始體驗</string>
    <string name="Realmain_subtitle2">超級助教</string>
    <string name="Realmain_subtitle3">智慧服務</string>
    <string name="Realmain_info1">三大特色</string>
    <string name="Realmain_info2">即時手機點名</string>
    <string name="Realmain_info3">快速、省時還能查閱出席紀錄</string>
    <string name="Realmain_info4">動態課表編輯</string>
    <string name="Realmain_info5">再也不怕忘記幾點上課了</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="title_activity_teacher_main">TeacherMainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tecMain_txt1">老師 歡迎回來</string>
    <string name="tecMain_txt2">願您依舊對教育充滿熱情
        \n和您分享一句話
        \n引導與啟發比批評更適合孩子</string>
    <string name="tecMain_create_class">新增課程</string>
    <string name="tecMain_select_class">教室選擇</string>

    <string name="tecLottery_title">抽籤</string>
    <string name="tecLottery_txtt">說明：</string>
    <string name="tecLottery_txt1">抽籤會以當天有點名的學生名單為主，若當日無點名紀錄，則以全班名單為主</string>
    <string name="tecLottery_btn">抽籤</string>

    <string name="tecStuList_select">查詢</string>
    <string name="tecStuList_inputId">請輸入姓名</string>
    <string name="tecStuList_id">學號：</string>

    <string name="tecNewClass_name">課程名稱</string>
    <string name="tecNewClass_classCode">課程代碼</string>
    <string name="tecNewClass_txt1">請輸入課程名稱與代碼</string>
    <string name="tecNewClass_new">新 增</string>

    <string name="tecRollCall_title">\n\n點名系統</string>
    <string name="tecRollCall_txt">1.點選「點名」開放學生線上點名
        \n2.點選「結束」後，系統將統計未點名之學生名單於下方，可手動點名
        \n3.點名紀錄一天至多一次，若再次點名則會以最新紀錄為主</string>
    <string name="tecRollCall_btn_rollcall">點名</string>
    <string name="tecRollCall_btn_endRollcall">結束</string>
    <string name="tecRollCall_NoRollcall">&#160;&#160;&#160;&#160;未出席：</string>

    <string name="tecSelectRoom_title">教室選擇</string>
    <string name="tecSelectRoom_txt_select">輸入課程名稱/代碼</string>
    <string name="tecSelectRoom_item_class">課程名稱</string>
    <string name="tecSelectRoom_item_code">課程代碼：</string>

    <string name="tecRecord_title">點名紀錄</string>
    <string name="tecRecord_today">今日紀錄</string>
    <string name="tecRecord_semester">學期紀錄</string>
    <string name="drawer_logout">登出</string>
    =======


    <string name="Class_table_MON">MON</string>
    <string name="Class_table_TUE">TUE</string>
    <string name="Class_table_WED">WED</string>
    <string name="Class_table_THU">THU</string>
    <string name="Class_table_FRI">FRI</string>
    <string name="Class_table_noon">午休</string>
    <string name="title_activity_second">SecondActivity</string>

    <string name="stdInputCode_title">請輸入課程代碼</string>
    <string name="stdInputCode_continue">Continue</string>
    <string name="stdInputCode_errorMesg">查無此課程</string>

    <string name="stdrollcall_text1">請先確認老師是否已開放點名</string>
    <string name="stdrollcall_check">簽到</string>
    <string name="stdrecord_update">更新</string>

    <string name="Revise_STDtitle">修改學生資料</string>
    <string name="Revise_TCHtitle">修改教師資料</string>
    <string name="Revise_dedpartment">科系</string>
    <string name="Revise_STDacc">學號</string>
    <string name="Revise_TCHacc">教師編號</string>
    <string name="Revise_name">姓名</string>
    <string name="Revise_pwd">密碼</string>
    <string name="Revise_email">信箱</string>
    <string name="Revise_revise">確認修改</string>


    <string name="Std_mainpage_enterclass">進入教室</string>
    <string name="Std_mainpage_inputcode">輸入課程代碼</string>
    <string name="Std_mainpage_classtable">我的課表</string>
    <string name="Std_mainpage_revisedata">修改個人設定</string>
    <string name="Std_input_code">新增失敗 請確認代碼是否正確</string>

</resources>