<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/school_icon"
            android:title="@string/menu_stdMainPage" />

        <item
            android:id="@+id/nav_inputCourseCode"
            android:icon="@drawable/plus"
            android:title="@string/menu_InputCourseCode" />

        <item
            android:id="@+id/nav_EnterClass"
            android:icon="@drawable/intoclass"
            android:title="@string/menu_EnterClass"/>

        <item
            android:id="@+id/nav_classTable"
            android:icon="@drawable/class_table"
            android:title="@string/menu_Table" />

        <item
            android:id="@+id/nav_reviseStdData"
            android:icon="@drawable/gear"
            android:title="@string/menu_Set" />
    </group>
</menu>