<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tec_main"
            android:icon="@drawable/school_icon"
            android:title="@string/menu_tecMainPage" />
        <item
            android:id="@+id/nav_tec_newclass"
            android:icon="@drawable/plus"
            android:title="@string/menu_tecNewClass" />
        <item
            android:id="@+id/nav_selectRoom"
            android:icon="@drawable/intoclass"
            android:title="@string/menu_tecEnterClass" />
        <item
            android:id="@+id/nav_reviseTchData"
            android:icon="@drawable/gear"
            android:title="@string/menu_Set" />
    </group>
</menu>