<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_tec_main">

    <fragment
        android:id="@+id/nav_tec_main"
        android:name="abc.project.projectcheckinapp.ui.test.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="abc.project.projectcheckinapp.ui.test.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_tec_enter"
        android:name="abc.project.projectcheckinapp.ui.test.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_tec_main"
        android:name="abc.project.projectcheckinapp.ui.Teacher.TeacherMainFragment"
        android:label="fragment_teacher_main"
        tools:layout="@layout/fragment_teacher_main" />
    <fragment
        android:id="@+id/nav_tec_newclass"
        android:name="abc.project.projectcheckinapp.ui.Teacher.NewClassFragment"
        android:label="fragment_new_class"
        tools:layout="@layout/fragment_new_class" />
    <fragment
        android:id="@+id/nav_tec_enter"
        android:name="abc.project.projectcheckinapp.ui.Teacher.TeacherEnterClassFragment"
        android:label="fragment_teacher_enter_class"
        tools:layout="@layout/fragment_teacher_enter_class" />
</navigation>