<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Teacher.RollCallFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="120sp"
            android:fontFamily="@font/droid_sans_fallback_full"
            android:text="@string/tecRollCall_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="150sp">

            <TextView
                android:id="@+id/textView25"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/droid_sans_fallback_full"
                android:text="@string/tecRollCall_txt"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.57"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="80sp">

            <Button
                android:id="@+id/btn_tec2_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/droid_sans_fallback_full"
                android:text="@string/tecRollCall_btn_rollcall"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/txt_tec2_noRollcall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/droid_sans_fallback_full"
            android:text="@string/tecRollCall_NoRollcall"
            android:textSize="18sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Recycler_stuAbsence"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/no_rollcall_list_row_item" />

    </LinearLayout>

</FrameLayout>